<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context="com.projectxi.berlemstudio.contentmanagement.Activity.CreateStoryActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <android.support.v7.widget.Toolbar
            xmlns:cycle="http://schemas.android.com/apk/res-auto"
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dip"
            android:background="@color/Appbar"
            android:elevation="4dp"
            android:theme="@style/ToolBarStyle"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_margin="20dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint"
                android:layout_margin="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_story_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_name"
                    android:textColor="@color/primaryText"
                    android:inputType="text"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/secondaryText"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint"
                android:layout_margin="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_story_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_des"
                    android:textColor="@color/primaryText"
                    android:inputType="text"
                    android:layout_marginBottom="5dp"
                    />

            </android.support.design.widget.TextInputLayout>



                <Button android:id="@+id/button_send"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_save"
                    android:layout_margin="20dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
